added final slide

--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -544,6 +544,11 @@ angular.module('app', [])
 						<video class="stretch" controls src="img/gmd-hd.mp4"></video>
 					</section>
 				</section>
+
+				<section>
+					<h2>Thank you!</h2>
+					<p>Find this presentation <a href="http://presentations.jberndsen.nl/introduction-angular-for-dotnet/">here</a></p>
+				</section>
 			</div>
 
 		</div>
