--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -547,7 +547,7 @@ angular.module('app', [])
 
 				<section>
 					<h2>Thank you!</h2>
-					<p>Find this presentation <a href="http://presentations.jberndsen.nl/introduction-angular-for-dotnet/">here</a></p>
+					<p>Find this presentation at <a href="http://presentations.jberndsen.nl/introduction-angular-for-dotnet/">http://presentations.jberndsen.nl/introduction-angular-for-dotnet/</a></p>
 				</section>
 			</div>
 
