added some pictures

--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -483,7 +483,12 @@ angular.module('app', [])
 					<section>
 						<h2>The community</h2>
 						<p class="orange">Quite possibly the best part of it all</p>
+					</section>
 					<section>
+						<div style="width: 25%; float: right;">
+							<img src="img/nodejs.png" style="border: 0; background: none; box-shadow: none; transform: rotate(90deg) scale(2,2);" />
+						</div>
+						<div style="width: 75%; float: left;"
 						<h2>NodeJS</h2>
 						<p class="orange">JavaScript runtime environment</p>
 						<p class="fragment roll-in">Comes with the package manager NPM</p>
@@ -491,20 +496,29 @@ angular.module('app', [])
 						<p class="fragment roll-in">Get it at <a href="www.nodejs.org">www.nodejs.org</a></p>
 					</section>
 					<section>
-						<h2>Grunt / Gulp</h2>
-						<p class="orange">Because who likes doing mundane work?</p>
-						<p class="fragment roll-in">The Javascript task runner</p>
-						<p class="fragment roll-in">In one word: automation</p>
-						<p class="fragment roll-in">Minification, compilation, unit testing, linting, etc.</p>
-						<blockquote class="fragment roll-in">> npm install -g grunt</blockquote>
+						<img src="img/grunt.png" style="border: 0; background: none; box-shadow: none; float: right; width: 25%" />
+						<div style="width: 75%; float: left";>
+							<h2>Grunt / Gulp</h2>
+							<p class="orange">Because who likes doing mundane work?</p>
+							<p class="fragment roll-in">The Javascript task runner</p>
+							<p class="fragment roll-in">In one word: automation</p>
+							<p class="fragment roll-in">Minification, compilation, unit testing, linting, etc.</p>
+							<blockquote class="fragment roll-in">> npm install -g grunt</blockquote>
+					</div>
 					</section>
 					<section>
-						<h2>Yeoman and Bower</h2>
-						<p class="orange">Scaffolding tool for modern web apps</p>
-						<p class="fragment roll-in">Kickstart your project using generators</p>
-						<p class="fragment roll-in">Scaffold boilerplate code, grunt tasks and bower dependencies</p>
-						<p class="fragment roll-in">Use Bower for in-project dependencies</p>
-						<blockquote class="fragment roll-in">> npm install -g yo</blockquote>
+						<div style="width: 25%; float: right;">
+							<img src="img/yeoman.jpg" style="border: 0; background: none; box-shadow: none;" /><br />
+							<img src="img/bower.png" style="border: 0; background: none; box-shadow: none;" />
+						</div>
+						<div style="width: 75%; float: left";>
+							<h2>Yeoman and Bower</h2>
+							<p class="orange">Scaffolding tool for modern web apps</p>
+							<p class="fragment roll-in">Kickstart your project using generators</p>
+							<p class="fragment roll-in">Scaffold boilerplate code, grunt tasks and bower dependencies</p>
+							<p class="fragment roll-in">Use Bower for in-project dependencies</p>
+							<blockquote class="fragment roll-in">> npm install -g yo</blockquote>
+					</div>
 					</section>
 					<section>
 						<h2>Jasmine, Karma and Protractor</h2>
