--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -521,11 +521,14 @@ angular.module('app', [])
 					</div>
 					</section>
 					<section>
+						<img src="img/jasmine_vertical.svg" style="border: 0; background: none; box-shadow: none; width: 20%" />
+						<img src="img/karma.png" style="border: 0; background: none; box-shadow: none; width: 20%;" />
 						<h2>Jasmine, Karma and Protractor</h2>
 						<p class="orange">Testing is important! You should do it!</p>
 						<p class="fragment roll-in"><a href="http://jasmine.github.io/">Jasmine</a> is a behavior-driven test framework</p>
 						<p class="fragment roll-in"><a href="http://karma-runner.github.io/0.12/index.html">Karma</a> automates running the test suites in all browsers</p>
 						<p class="fragment roll-in"><a href="http://angular.github.io/protractor/#/">Protractor</a> offers full E2E testing for your angular apps</p>
+
 					</section>
 				</section>
 
