--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -55,8 +55,11 @@
 
 				<section data-background="img/jeroenberndsen.jpg">
 					<div style="text-align: left; float: left; width: 50%;">
-					<h2>Hello There!</h2>
-				</div>
+						<h2>Hello There!</h2>
+						<p class="fragment">My name is Jeroen</p>
+						<p class="fragment">Web architect at Trivento</p>
+						<p class="fragment">Who are you?</p>
+					</div>
 				</section>
 
 				<section>
