--- a/introduction-angular-for-dotnet/index.html
+++ b/introduction-angular-for-dotnet/index.html
@@ -23,7 +23,7 @@
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
 		<!-- angular -->
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
+		<script src="js/angular.min.js"></script>
 		<script src="app.js"></script>
 
 		<!-- Printing and PDF exports -->
