added more pics

--- a/introduction-angular/index.html
+++ b/introduction-angular/index.html
@@ -67,12 +67,11 @@
 				<section data-background="img/backdrop_3.png">
 					<div style="width: 50%; float: left"><img src="img/toon.png" style="border: 0;"></div>
 					<div style="width: 50%; float: right">
-						<h4 class="spacey">Some common app properties</h3>
+						<h3 class="spacey">Some common app properties</h3>
 							<ul>
 								<li class="fragment roll-in">Autonomous operation, offline capabilities, responsive design</li>
 								<li class="fragment roll-in">Intuitive user interface and interactions</li>
 								<li class="fragment roll-in">Real-time data analysis and visualization</li>
-								<li class="fragment roll-in">Definitely not a simple shell around a back-end system</li>
 							</ul>
 					</div>
 				</section>
@@ -106,13 +105,9 @@
 						Atwood's Law
 					</p>
 				</section>
-				<section data-background="img/backdrop_1.png">
-					<h2 class="white">Javascript is everywhere</h2>
-					<img src="img/nodejs-logo.png" width="33%" style="border: 0" />
-					<img src="img/Ionic_Logo.png" width="33%" style="border: 0" />
-					<img src="img/electron.svg" width="33%" style="border: 0" />
-					<img src="img/nodebots.png" width="15%" style="border: 0" />
-				</section>
+				<section data-background="img/untappd.jpg"></section>
+				<section data-background="img/electron.png"></section>
+				<section data-background="img/znap.jpg"></section>
 			</section>
 
 			<!-- Frameworks -->
@@ -167,6 +162,7 @@
 					<p class="fragment roll-in spacey">HTML is our primary means of describing the GUI, but it is (currently) not extensible or very expressive.</p>
 					<p class="fragment roll-in light">Extend HTML with reusable custom element tags that encapsulate style, markup and functionality to build rich applications.</p>
 				</section>
+				<section data-background="img/styleguide.jpg"></section>
 				<section data-background="img/backdrop_2.png">
 					<div style="width: 50%; float: left"><img src="img/lego.png" style="border: 0;"></div>
 					<div style="width: 50%; float: right">
@@ -181,6 +177,7 @@
 						</ul>
 					</div>
 				</section>
+				
 				<section data-background="img/comp-0.png">
 				</section>
 				<section data-background="img/comp-1.png">
