--- a/introduction-angular/index.html
+++ b/introduction-angular/index.html
@@ -402,7 +402,7 @@ export class UserComponent {
 		// Full list of configuration options available at:
 		// https://github.com/hakimel/reveal.js#configuration
 		Reveal.initialize({
-			controls: true,
+			controls: false,
 			progress: true,
 			history: true,
 			center: true,
